--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "diff-sync-js",
     "version": "1.0.6",
     "description": "A JavaScript implementation of Neil Fraser Differential Synchronization Algorithm",
-    "main": "lib/index.js",
+    "main": "src/index.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/weijie0192/diff-sync-js.git"
